# cle

./: .gitignore  .gitmodules  README.md  check.sh
backend/: README.md
backend/inst-sched/: README.md
backend/inst-selec/: README.md
backend/inst-selec/tree-match-burs-table/: check.sh
backend/inst-selec/tree-match-burs1/src/: CMakeLists.txt  main.cc
backend/inst-selec/tree-match-burs1/src/isa/: isa.cc  isa.hh
backend/inst-selec/tree-match-burs1/src/lib/: block-graph.cc  block-graph.hh  cfg.cc  context-aa64.cc  context.cc  context.hh  live-out.cc  matcher.cc  matcher.hh  module-pass.cc  module-pass.hh  module.cc  module.hh  rewriter.cc  rewriter.hh  rules.cc  rules.hh
backend/inst-selec/tree-match-burs1/src/utils/: digraph.hh
backend/inst-selec/tree-match-graphs/src/: CMakeLists.txt  main.cc
backend/inst-selec/tree-match-graphs/src/lib/: analysis.hh  block-graph.cc  block-graph.hh  cfg.hh  context-x64.cc  context.cc  live-out.cc  live-out.hh  matcher.cc  matcher.hh  module.cc  module.hh  rules.cc  rules.hh
backend/inst-selec/tree-match-graphs/src/utils/: digraph.cc
backend/inst-selec/tree-match-naive/: CMakeLists.txt
backend/reg-alloc/: README.md
backend/reg-alloc/block-bottomup/: CMakeLists.txt
backend/reg-alloc/block-naive/: CMakeLists.txt
backend/reg-alloc/block-naive/examples/: ex1.ir  matmul.ir
backend/reg-alloc/block-naive/src/: CMakeLists.txt  main.cc
backend/reg-alloc/block-naive/src/lib/: allocator.cc  allocator.hh
backend/reg-alloc/block-naive/src/utils/: digraph.hh
backend/reg-alloc/block-naive/tests/: CMakeLists.txt
backend/reg-alloc/color-ssa-bu/src/: CMakeLists.txt  main.cc
backend/reg-alloc/color-ssa-bu/src/isa/: analysis.hh  module.cc
backend/reg-alloc/color-ssa-bu/src/lib/: allocator.cc  allocator.hh  coalescing.cc  coalescing.hh  interference-graph.cc  live-now.cc  live-out.hh  spill-cost.hh
backend/reg-alloc/color-ssa-bu/src/utils/: digraph.cc  dyn-graph.hh  dyn-graph.hxx  graph.hh  union-find.hh
frontend/: README.md
frontend/lexer/: README.md
frontend/lexer/lexer-simple-py/: check.sh
frontend/lexer/regex-simple-py/: check.sh
middle-end-optis/: README.md
middle-end-optis/dead-code-elim/examples/: ex1.ll  ex2.ll  ex3.ll  ex4.ll  ex5.ll  ex6.ll  ex7.ll  ex8.ll
middle-end-optis/dead-code-elim/src/: CMakeLists.txt  main.cc
middle-end-optis/dead-code-elim/src/lib/: cfg.cc  cfg.hh  dce.cc  dce.hh  dcfe.cc  dcfe.hh  digraph.cc  digraph.hh  dom-frontier.cc  dom-frontier.hh  dom-tree.cc  dom-tree.hh  unreachable.cc  unreachable.hh
middle-end-optis/dead-code-elim/tests/: CMakeLists.txt
middle-end-optis/dom-value-numbering/examples/: ex1.ir  ex2.ir
middle-end-optis/dom-value-numbering/src/: CMakeLists.txt  main.cc
middle-end-optis/dom-value-numbering/src/lib/: cfg.cc  cfg.hh  dvnt.cc  dvnt.hh  module.hh  names-table.cc  value.cc
middle-end-optis/dom-value-numbering/tests/: CMakeLists.txt
middle-end-optis/dominance/examples/: ex1.ll  ex2.ll
middle-end-optis/dominance/src/: CMakeLists.txt  main.cc
middle-end-optis/dominance/tests/: CMakeLists.txt
middle-end-optis/fun-inliner/examples/: ex1.ir
middle-end-optis/fun-inliner/src/: CMakeLists.txt  main.cc
middle-end-optis/fun-inliner/tests/: CMakeLists.txt
middle-end-optis/global-code-placement/: CMakeLists.txt
middle-end-optis/global-code-placement/examples/: ex1.ir  ex2.ir
middle-end-optis/global-code-placement/src/: CMakeLists.txt  main.cc
middle-end-optis/global-code-placement/tests/: CMakeLists.txt
middle-end-optis/idom/examples/: ex1.ir  ex2.ir
middle-end-optis/idom/src/: CMakeLists.txt  main.cc
middle-end-optis/idom/tests/: CMakeLists.txt
middle-end-optis/interproc-constprop/examples/: ex1.ir  ex2.ir  ex3.ir
middle-end-optis/interproc-constprop/src/: CMakeLists.txt  main.cc
middle-end-optis/interproc-constprop/tests/: CMakeLists.txt
middle-end-optis/lazy-code-motion/examples/: ex1.ir
middle-end-optis/lazy-code-motion/src/: CMakeLists.txt  main.cc
middle-end-optis/lazy-code-motion/tests/: CMakeLists.txt
middle-end-optis/live-uninit-regs/examples/: ex1.ir
middle-end-optis/live-uninit-regs/src/: CMakeLists.txt  main.cc
middle-end-optis/live-uninit-regs/tests/: CMakeLists.txt
middle-end-optis/local-value-numbering/examples/: ex1.ir  ex2.ir  (+4 more)
middle-end-optis/superblock-cloning/src/: CMakeLists.txt  main.cc
middle-end-optis/superblock-cloning/src/lib/: cfg.hh  cloner.cc  cloner.hh  idom.hh  module.cc  module.hh  sbc.cc  sbc.hh
middle-end-optis/tree-height-balancing/: CMakeLists.txt
middle-end-optis/tree-height-balancing/src/: CMakeLists.txt  main.cc
middle-end-optis/tree-height-balancing/src/lib/: thb.cc  thb.hh
utils/libcpp_gop10/: CMakeLists.txt
utils/libcpp_gop10/include/gop10/: err.hh  fwd.hh  module.hh
utils/libcpp_gop10/src/: CMakeLists.txt  module.cc
utils/libcpp_utils/: CMakeLists.txt
utils/logia/: README.md
utils/mdlogger/: .gitignore  README.md
(+355 files in other folders)
